--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,159 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        {% block stylesheets %}
+            {% stylesheets '@AppBundle/Resources/public/css/*' %}
+            <link rel='stylesheet' href='{{ asset_url }}'>
+            {% endstylesheets %}
+        {% endblock %}
+
+        {% stylesheets '@bootstrap_css' %}
+        <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}">
+        {% endstylesheets %}
+
+        {% stylesheets 'bundles/app/css/*' filter='cssrewrite' %}
+        <link rel='stylesheet' href='{{ asset_url }}'>
+        {% endstylesheets %}
+
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
     </head>
     <body>
+
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="{{ path('homepage') }}">Home</a>
+                </div>
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                Browse <span class="caret"></span>
+                            </a>
+                            {{ knp_menu_render('AppBundle:Builder:navMenu') }}
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                About <span class="caret"></span>
+                            </a>
+                            {{ knp_menu_render('NinesBlogBundle:Builder:pageNavMenu') }}
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                Announcements <span class="caret"></span>
+                            </a>
+                            {{ knp_menu_render('NinesBlogBundle:Builder:postNavMenu') }}
+                        </li>
+
+                        {% if app.user is not null and is_granted('ROLE_ADMIN') %}
+                            <li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                    Admin <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="{{ path('firm_index') }}">Firms</a></li>
+                                    <li><a href="{{ path('firmrole_index') }}">Firm Roles</a></li>										
+                                    <li><a href="{{ path('format_index') }}">Formats</a></li>
+                                    <li><a href="{{ path('genre_index') }}">Genres</a></li>
+                                    <li><a href="{{ path('geonames_index') }}">Geonames</a></li>
+                                    <li><a href="{{ path('person_index') }}">Persons</a></li>
+                                    <li><a href="{{ path('role_index') }}">Roles</a></li>
+                                    <li><a href="{{ path('source_index') }}">Sources</a></li>
+                                    <li><a href="{{ path('title_index') }}">Titles</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="{{ path('admin_comment_index') }}">Comments</a></li>
+                                    <li><a href="{{ path('admin_comment_note_index') }}">Comment Notes</a></li>
+                                    <li><a href="{{ path('admin_comment_status_index') }}">Comment Statuses</a></li>
+                                    <li role="separator" class="divider"></li>										
+                                    <li><a href="{{ path('post_index') }}">Blog Posts</a></li>
+                                    <li><a href="{{ path('post_status_index') }}">Post Statuses</a></li>
+                                    <li><a href="{{ path('post_category_index') }}">Post Categories</a></li>
+                                    <li role="separator" class="divider"></li>										
+                                    <li>
+                                        <a href="{{ path('user') }}">
+                                            Users
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        {% endif %}
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if app.user is not null and is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                            <li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                    {{ app.user.username }} <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="{{ path('fos_user_profile_show') }}">
+                                            Profile
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="{{ path('fos_user_change_password') }}">
+                                            Change Password
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="{{ path('fos_user_security_logout') }}">
+                                            Logout
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a href="{{ path('fos_user_security_login') }}">
+                                    Login
+                                </a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </nav>
+        <div class="container">
+
+            {% if block('pageheader') is defined %}
+                <div class="page-header">
+                    {{ block('pageheader') }}
+                </div>
+            {% endif %}
+
+            {% for type, messages in app.session.flashbag.all() %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ type }}">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+
+    </div>
+
+    {% javascripts '@jquery' '@bootstrap_js' 'bundles/app/js/*' %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+
+    {% javascripts '@AppBundle/Resources/public/js/*' %}	
+    {% endjavascripts %}
+    
+    <script type="text/javascript" src="{{ asset('bundles/bmatznerjqueryui/js/minified/jquery-ui.min.js') }}"></script>
+
+{% block javascripts %}{% endblock %}
+</body>
 </html>
