get most fo teh stuff working.

--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -7,9 +7,13 @@ body > .container {
 /* Custom app styles */
 
 label.required::after {
-    content: ' *';
+    content: '*';
     color: red;
     font-weight: bold;
+}
+
+.radio label.required::after {
+    content: '';
 }
 
 a[href ^= 'mailto:']::after {
