--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -7,13 +7,9 @@ body > .container {
 /* Custom app styles */
 
 label.required::after {
-    content: '*';
+    content: ' *';
     color: red;
     font-weight: bold;
-}
-
-.radio label.required::after {
-    content: '';
 }
 
 a[href ^= 'mailto:']::after {
@@ -59,4 +55,34 @@ a[href ^= 'https://']::after {
     line-height: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;        
+}
+
+/* Collection form pages. */ 
+.form-group {
+	border-bottom: 1px solid #ccc;
+	padding-bottom: 12px;
+}
+
+.form-group .form-group {
+	border-bottom: none;
+}
+
+.collection .form-group {
+	padding-top: 28px;
+}
+
+.collection .form-group:last-child {
+    border-bottom: none;
+}
+.collection .form-group .form-group {
+    border-bottom: none;
+    padding-top: 0px;
+}
+
+.collection .form-group label {
+
+}
+
+label .btn {
+    display: block;
 }
