start working on the contrib type ahead. slow going.

--- a/src/AppBundle/Resources/views/Person/show.html.twig
+++ b/src/AppBundle/Resources/views/Person/show.html.twig
@@ -22,8 +22,8 @@
     <table class="table table-bordered table-condensed table-hover table-striped">
         <tbody>
             <tr>
-                <th>Fullname</th>
-            <td>{{ person.fullname }}</td>
+                <th>FullName</th>
+            <td>{{ person.fullName }}</td>
             </tr>
             <tr>
                 <th>Created</th>
