--- a/src/AppBundle/Resources/views/Person/index.html.twig
+++ b/src/AppBundle/Resources/views/Person/index.html.twig
@@ -23,7 +23,7 @@
     <table class="table table-bordered table-condensed table-hover table-striped">
         <thead>
             <tr>
-                <th>Fullname</th>
+                <th>FullName</th>
                 <th>Created</th>
                 <th>Updated</th>            </tr>
         </thead>
@@ -32,7 +32,7 @@
             <tr>
                 <td>
                     <a href="{{ path('person_show', { 'id': person.id }) }}">
-                        {{ person.fullname }}
+                        {{ person.fullName }}
                     </a>
                 </td>
                 <td>{% if person.created %}{{ person.created|date('Y-m-d H:i:s') }}{% endif %}</td>
