--- a/src/AppBundle/Resources/views/Work/workContributions.html.twig
+++ b/src/AppBundle/Resources/views/Work/workContributions.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% block styles %}
+{% endblock %}
+
 {% block body %}
     <h1>Contributions</h1>
 
@@ -18,5 +21,10 @@
 
     <script>
         typeahead_path = '{{ path('person_typeahead') }}';
+    </script>
+{% endblock %}
+
+{% block javascripts %}
+    <script>
     </script>
 {% endblock %}
