Make links between related entities, get some of the simple searches in place, remove some of the silly code.
still need to do fancy searching for subject and work.

--- a/src/AppBundle/Resources/views/DateCategory/show.html.twig
+++ b/src/AppBundle/Resources/views/DateCategory/show.html.twig
@@ -44,4 +44,15 @@
         </tbody>
     </table>
 
+    {% if dateCategory.dates %}
+        <h2>Dates</h2>
+        <ul>
+            {% for date in dateCategory.dates %}
+                <li>
+                    {% include 'AppBundle:Work:workBrief.html.twig' with {'work': date.work} %}
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
 {% endblock %}
