--- a/src/AppBundle/Resources/views/Publisher/show.html.twig
+++ b/src/AppBundle/Resources/views/Publisher/show.html.twig
@@ -35,5 +35,7 @@
             </tr>
         </tbody>
     </table>
+            
+    {% include 'AppBundle:Work:workList.html.twig' with {'works': publisher.works} %}
 
 {% endblock %}
