--- a/src/AppBundle/Resources/views/Contribution/index.html.twig
+++ b/src/AppBundle/Resources/views/Contribution/index.html.twig
@@ -1,45 +1,45 @@
 {% extends 'base.html.twig' %}
 
- {% block pageheader %} 
+{% block pageheader %} 
     <h1>Contribution List</h1>
     <p class="count">
         Displaying {{ contributions|length }} contributions of {{ contributions.getTotalItemCount }} total.
     </p>
- {% endblock %} 
+{% endblock %} 
 
 {% block body %}
 
-        <div class='btn-toolbar pull-right'>
-        <div class='btn-group'>
-            <a href="{{ path('contribution_new') }}" class="btn btn-default">
-                <span class="glyphicon glyphicon-plus"></span> New
-            </a>
-            <a href="{{ path('contribution_search') }}" class="btn btn-default">
-                <span class="glyphicon glyphicon-search"></span> Search
-            </a>
-        </div>
-    </div>
-        
     <table class="table table-bordered table-condensed table-hover table-striped">
         <thead>
             <tr>
-                <th>Created</th>
-                <th>Updated</th>            </tr>
+                <th>Person</th>
+                <th>Role</th>
+                <th>Work</th>
+            </tr>
         </thead>
         <tbody>
-        {% for contribution in contributions %}
-            <tr>
-                <td>
-                    <a href="{{ path('contribution_show', { 'id': contribution.id }) }}">
-                        {{ contribution.created }}
-                    </a>
-                </td>
-                <td>{% if contribution.updated %}{{ contribution.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-        {% endfor %}
+            {% for contribution in contributions %}
+                <tr>
+                    <td>
+                        <a href="{{ path('person_show', {'id': contribution.person.id}) }}">
+                            {{ contribution.person }}
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{{ path('role_show', {'id': contribution.role.id}) }}">
+                            {{ contribution.role }}
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{{ path('work_show', {'id': contribution.work.id}) }}">
+                            {{ contribution.work }}
+                        </a>
+                    </td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
-        
+
     <div class="navigation">
         {{ knp_pagination_render(contributions) }}
     </div>
