--- a/src/AppBundle/Resources/views/DateYear/index.html.twig
+++ b/src/AppBundle/Resources/views/DateYear/index.html.twig
@@ -1,53 +1,41 @@
 {% extends 'base.html.twig' %}
 
- {% block pageheader %} 
+{% block pageheader %} 
     <h1>DateYear List</h1>
     <p class="count">
         Displaying {{ dateYears|length }} dateYears of {{ dateYears.getTotalItemCount }} total.
     </p>
- {% endblock %} 
+{% endblock %} 
 
 {% block body %}
 
-        <div class='btn-toolbar pull-right'>
-        <div class='btn-group'>
-            <a href="{{ path('date_new') }}" class="btn btn-default">
-                <span class="glyphicon glyphicon-plus"></span> New
-            </a>
-            <a href="{{ path('date_search') }}" class="btn btn-default">
-                <span class="glyphicon glyphicon-search"></span> Search
-            </a>
-        </div>
-    </div>
-        
     <table class="table table-bordered table-condensed table-hover table-striped">
         <thead>
             <tr>
-                <th>Start</th>
-                <th>Startcirca</th>
-                <th>End</th>
-                <th>Endcirca</th>
-                <th>Created</th>
-                <th>Updated</th>            </tr>
+                <th>Date</th>
+                <th>Category</th>
+                <th>Work</th>
+            </tr>
         </thead>
         <tbody>
-        {% for dateYear in dateYears %}
-            <tr>
-                <td>
-                    <a href="{{ path('date_show', { 'id': dateYear.id }) }}">
-                        {{ dateYear.start }}
-                    </a>
-                </td>
-                <td>{% if dateYear.startCirca %}Yes{% else %}No{% endif %}</td>
-                <td>{{ dateYear.end }}</td>
-                <td>{% if dateYear.endCirca %}Yes{% else %}No{% endif %}</td>
-                <td>{% if dateYear.created %}{{ dateYear.created|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if dateYear.updated %}{{ dateYear.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-        {% endfor %}
+            {% for dateYear in dateYears %}
+                <tr>
+                    <td>{{ dateYear.value }}</td>
+                    <td>
+                        <a href="{{ path('date_category_show', {'id': dateYear.dateCategory.id}) }}">
+                            {{ dateYear.dateCategory }}
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{{ path('work_show', {'id': dateYear.work.id}) }}">
+                            {{ dateYear.work }}
+                        </a>
+                    </td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
-        
+
     <div class="navigation">
         {{ knp_pagination_render(dateYears) }}
     </div>
