--- a/src/AppBundle/Resources/views/Genre/show.html.twig
+++ b/src/AppBundle/Resources/views/Genre/show.html.twig
@@ -1,24 +1,24 @@
 {% extends 'base.html.twig' %}
 
- {% block pageheader %} 
+{% block pageheader %} 
     <h1>Genre</h1>
- {% endblock %} 
+{% endblock %} 
 
 {% block body %}
 
     <div class="btn-toolbar">
-    <div class="btn-group pull-right">
-        <a href="{{ path('genre_index') }}" class="btn btn-default">
-            <span class="glyphicon glyphicon-arrow-left"></span> Back
-        </a>
-        <a href="{{ path('genre_edit', { 'id': genre.id }) }}" class="btn btn-default">
-            <span class='glyphicon glyphicon-edit'></span> Edit
-        </a>
-        <a href="{{ path('genre_delete', { 'id': genre.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Genre?">
-            <span class='glyphicon glyphicon-remove'></span> Delete
-        </a>
+        <div class="btn-group pull-right">
+            <a href="{{ path('genre_index') }}" class="btn btn-default">
+                <span class="glyphicon glyphicon-arrow-left"></span> Back
+            </a>
+            <a href="{{ path('genre_edit', { 'id': genre.id }) }}" class="btn btn-default">
+                <span class='glyphicon glyphicon-edit'></span> Edit
+            </a>
+            <a href="{{ path('genre_delete', { 'id': genre.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Genre?">
+                <span class='glyphicon glyphicon-remove'></span> Delete
+            </a>
+        </div>
     </div>
-</div>
     <table class="table table-bordered table-condensed table-hover table-striped">
         <tbody>
             <tr>
@@ -43,5 +43,7 @@
             </tr>
         </tbody>
     </table>
+
+    {% include 'AppBundle:Work:workList.html.twig' with {'works': genre.works} %}
 
 {% endblock %}
