--- a/src/AppBundle/Resources/views/Person/show.html.twig
+++ b/src/AppBundle/Resources/views/Person/show.html.twig
@@ -1,29 +1,29 @@
 {% extends 'base.html.twig' %}
 
- {% block pageheader %} 
+{% block pageheader %} 
     <h1>Person</h1>
- {% endblock %} 
+{% endblock %} 
 
 {% block body %}
 
     <div class="btn-toolbar">
-    <div class="btn-group pull-right">
-        <a href="{{ path('person_index') }}" class="btn btn-default">
-            <span class="glyphicon glyphicon-arrow-left"></span> Back
-        </a>
-        <a href="{{ path('person_edit', { 'id': person.id }) }}" class="btn btn-default">
-            <span class='glyphicon glyphicon-edit'></span> Edit
-        </a>
-        <a href="{{ path('person_delete', { 'id': person.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Person?">
-            <span class='glyphicon glyphicon-remove'></span> Delete
-        </a>
+        <div class="btn-group pull-right">
+            <a href="{{ path('person_index') }}" class="btn btn-default">
+                <span class="glyphicon glyphicon-arrow-left"></span> Back
+            </a>
+            <a href="{{ path('person_edit', { 'id': person.id }) }}" class="btn btn-default">
+                <span class='glyphicon glyphicon-edit'></span> Edit
+            </a>
+            <a href="{{ path('person_delete', { 'id': person.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Person?">
+                <span class='glyphicon glyphicon-remove'></span> Delete
+            </a>
+        </div>
     </div>
-</div>
     <table class="table table-bordered table-condensed table-hover table-striped">
         <tbody>
             <tr>
                 <th>FullName</th>
-            <td>{{ person.fullName }}</td>
+                <td>{{ person.fullName }}</td>
             </tr>
             <tr>
                 <th>Created</th>
@@ -35,5 +35,17 @@
             </tr>
         </tbody>
     </table>
+
+    {% if person.contributions|length > 0 %}
+        <h2>Works</h2>
+        <ul>
+            {% for contribution in person.contributions %}
+                <li>
+                    {% include 'AppBundle:Work:workBrief.html.twig' with {'work': contribution.work} %}
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
 
 {% endblock %}
