--- a/src/AppBundle/Resources/views/Role/show.html.twig
+++ b/src/AppBundle/Resources/views/Role/show.html.twig
@@ -1,24 +1,24 @@
 {% extends 'base.html.twig' %}
 
- {% block pageheader %} 
+{% block pageheader %} 
     <h1>Role</h1>
- {% endblock %} 
+{% endblock %} 
 
 {% block body %}
 
     <div class="btn-toolbar">
-    <div class="btn-group pull-right">
-        <a href="{{ path('role_index') }}" class="btn btn-default">
-            <span class="glyphicon glyphicon-arrow-left"></span> Back
-        </a>
-        <a href="{{ path('role_edit', { 'id': role.id }) }}" class="btn btn-default">
-            <span class='glyphicon glyphicon-edit'></span> Edit
-        </a>
-        <a href="{{ path('role_delete', { 'id': role.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Role?">
-            <span class='glyphicon glyphicon-remove'></span> Delete
-        </a>
+        <div class="btn-group pull-right">
+            <a href="{{ path('role_index') }}" class="btn btn-default">
+                <span class="glyphicon glyphicon-arrow-left"></span> Back
+            </a>
+            <a href="{{ path('role_edit', { 'id': role.id }) }}" class="btn btn-default">
+                <span class='glyphicon glyphicon-edit'></span> Edit
+            </a>
+            <a href="{{ path('role_delete', { 'id': role.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Role?">
+                <span class='glyphicon glyphicon-remove'></span> Delete
+            </a>
+        </div>
     </div>
-</div>
     <table class="table table-bordered table-condensed table-hover table-striped">
         <tbody>
             <tr>
@@ -43,5 +43,16 @@
             </tr>
         </tbody>
     </table>
+
+    {% if role.contributions|length > 0 %}
+        <h2>Works</h2>
+        <ul>
+            {% for contribution in role.contributions %}
+                <li>
+                    {% include 'AppBundle:Work:workBrief.html.twig' with {'work': contribution.work} %}
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
 {% endblock %}
