--- a/src/AppBundle/Resources/views/Subject/show.html.twig
+++ b/src/AppBundle/Resources/views/Subject/show.html.twig
@@ -1,24 +1,24 @@
 {% extends 'base.html.twig' %}
 
- {% block pageheader %} 
+{% block pageheader %} 
     <h1>Subject</h1>
- {% endblock %} 
+{% endblock %} 
 
 {% block body %}
 
     <div class="btn-toolbar">
-    <div class="btn-group pull-right">
-        <a href="{{ path('subject_index') }}" class="btn btn-default">
-            <span class="glyphicon glyphicon-arrow-left"></span> Back
-        </a>
-        <a href="{{ path('subject_edit', { 'id': subject.id }) }}" class="btn btn-default">
-            <span class='glyphicon glyphicon-edit'></span> Edit
-        </a>
-        <a href="{{ path('subject_delete', { 'id': subject.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Subject?">
-            <span class='glyphicon glyphicon-remove'></span> Delete
-        </a>
+        <div class="btn-group pull-right">
+            <a href="{{ path('subject_index') }}" class="btn btn-default">
+                <span class="glyphicon glyphicon-arrow-left"></span> Back
+            </a>
+            <a href="{{ path('subject_edit', { 'id': subject.id }) }}" class="btn btn-default">
+                <span class='glyphicon glyphicon-edit'></span> Edit
+            </a>
+            <a href="{{ path('subject_delete', { 'id': subject.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Subject?">
+                <span class='glyphicon glyphicon-remove'></span> Delete
+            </a>
+        </div>
     </div>
-</div>
     <table class="table table-bordered table-condensed table-hover table-striped">
         <tbody>
             <tr>
@@ -28,6 +28,12 @@
             <tr>
                 <th>Label</th>
                 <td>{{ subject.label }}</td>
+            </tr>
+            <tr>
+                <th>Source</th>
+                <td>
+                    <a href="{{ path('subject_source_show', {'id': subject.subjectSource.id }) }}">{{ subject.subjectSource }}</a>
+                </td>
             </tr>
             <tr>
                 <th>Description</th>
@@ -43,5 +49,7 @@
             </tr>
         </tbody>
     </table>
+            
+    {% include 'AppBundle:Work:workList.html.twig' with {'works': subject.works} %}
 
 {% endblock %}
