--- a/src/AppBundle/Resources/views/SubjectSource/show.html.twig
+++ b/src/AppBundle/Resources/views/SubjectSource/show.html.twig
@@ -1,24 +1,24 @@
 {% extends 'base.html.twig' %}
 
- {% block pageheader %} 
+{% block pageheader %} 
     <h1>SubjectSource</h1>
- {% endblock %} 
+{% endblock %} 
 
 {% block body %}
 
     <div class="btn-toolbar">
-    <div class="btn-group pull-right">
-        <a href="{{ path('subject_source_index') }}" class="btn btn-default">
-            <span class="glyphicon glyphicon-arrow-left"></span> Back
-        </a>
-        <a href="{{ path('subject_source_edit', { 'id': subjectSource.id }) }}" class="btn btn-default">
-            <span class='glyphicon glyphicon-edit'></span> Edit
-        </a>
-        <a href="{{ path('subject_source_delete', { 'id': subjectSource.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this SubjectSource?">
-            <span class='glyphicon glyphicon-remove'></span> Delete
-        </a>
+        <div class="btn-group pull-right">
+            <a href="{{ path('subject_source_index') }}" class="btn btn-default">
+                <span class="glyphicon glyphicon-arrow-left"></span> Back
+            </a>
+            <a href="{{ path('subject_source_edit', { 'id': subjectSource.id }) }}" class="btn btn-default">
+                <span class='glyphicon glyphicon-edit'></span> Edit
+            </a>
+            <a href="{{ path('subject_source_delete', { 'id': subjectSource.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this SubjectSource?">
+                <span class='glyphicon glyphicon-remove'></span> Delete
+            </a>
+        </div>
     </div>
-</div>
     <table class="table table-bordered table-condensed table-hover table-striped">
         <tbody>
             <tr>
@@ -43,5 +43,21 @@
             </tr>
         </tbody>
     </table>
+
+    {% if subjectSource.getSubjects()|length %} 
+        <h2>Subjects</h2>
+        <ul>
+            {% for subject in subjectSource.getSubjects() %}
+                <li>
+                    <b>
+                        <a href="{{ path('subject_show', {'id': subject.id}) }}">{{ subject }}</a>
+                    </b> 
+                    {% if subject.description %}
+                        <br>{{ subject.description }}
+                    {% endif %}
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
 {% endblock %}
