--- a/src/AppBundle/Resources/views/WorkCategory/show.html.twig
+++ b/src/AppBundle/Resources/views/WorkCategory/show.html.twig
@@ -44,4 +44,6 @@
         </tbody>
     </table>
 
+    {% include 'AppBundle:Work:workList.html.twig' with {'works': workCategory.works} %}                
+                
 {% endblock %}
