--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,7 +11,8 @@
         <link rel="stylesheet" href="{{ asset('bower/bootstrap/dist/css/bootstrap-theme.min.css') }}">
         <link rel="stylesheet" href="{{ asset('bundles/app/css/base.css') }}">        
         <script src="{{ asset('bower/jquery/dist/jquery.min.js') }}"></script>        
-        {% block styles %}{% endblock %}
+        {% block styles %}
+        {% endblock %}
     </head>
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -121,11 +122,13 @@
                 {% endfor %}
             {% endfor %}
 
-        {% block body %}{% endblock %}
-    </div>
+            {% block body %}
+            {% endblock %}
+        </div>
 
-    <script src="{{ asset('bower/bootstrap/dist/js/bootstrap.min.js') }}"></script>
-    <script src="{{ asset('bundles/app/js/form.js') }}"></script>
-    {% block javascripts %}{% endblock %}
-</body>
+        <script src="{{ asset('bower/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('bundles/app/js/form.js') }}"></script>
+        {% block javascripts %}
+        {% endblock %}
+    </body>
 </html>
