Start working on some documentation, and incorporate Kim's template edits.

--- a/src/AppBundle/Resources/views/DateCategory/index.html.twig
+++ b/src/AppBundle/Resources/views/DateCategory/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block pageheader %} 
-    <h1>DateCategory List</h1>
+    <h1>Date Category List</h1>
     <p class="count">
-        Displaying {{ dateCategories|length }} dateCategories of {{ dateCategories.getTotalItemCount }} total.
+        Displaying {{ date categories|length }} date categories of {{ date categories.getTotalItemCount }} total.
     </p>
 {% endblock %} 
 
