--- a/src/AppBundle/Resources/views/DateYear/index.html.twig
+++ b/src/AppBundle/Resources/views/DateYear/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block pageheader %} 
-    <h1>DateYear List</h1>
+    <h1>Date Year List</h1>
     <p class="count">
-        Displaying {{ dateYears|length }} dateYears of {{ dateYears.getTotalItemCount }} total.
+        Displaying {{ dateYears|length }} date years of {{ dateYears.getTotalItemCount }} total.
     </p>
 {% endblock %} 
 
