--- a/src/AppBundle/Resources/views/SubjectSource/index.html.twig
+++ b/src/AppBundle/Resources/views/SubjectSource/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block pageheader %} 
-    <h1>SubjectSource List</h1>
+    <h1>Subject Source List</h1>
     <p class="count">
-        Displaying {{ subjectSources|length }} subjectSources of {{ subjectSources.getTotalItemCount }} total.
+        Displaying {{ subjectSources|length }} subject sources of {{ subjectSources.getTotalItemCount }} total.
     </p>
 {% endblock %} 
 
