--- a/src/AppBundle/Resources/views/WorkCategory/index.html.twig
+++ b/src/AppBundle/Resources/views/WorkCategory/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block pageheader %} 
-    <h1>WorkCategory List</h1>
+    <h1>Work Category List</h1>
     <p class="count">
-        Displaying {{ workCategories|length }} workCategories of {{ workCategories.getTotalItemCount }} total.
+        Displaying {{ workCategories|length }} work categories of {{ workCategories.getTotalItemCount }} total.
     </p>
 {% endblock %} 
 
