--- a/src/AppBundle/Resources/views/DateCategory/index.html.twig
+++ b/src/AppBundle/Resources/views/DateCategory/index.html.twig
@@ -3,19 +3,21 @@
 {% block pageheader %} 
     <h1>Date Category List</h1>
     <p class="count">
-        Displaying {{ date categories|length }} date categories of {{ date categories.getTotalItemCount }} total.
+        Displaying {{ dateCategories|length }} date categories of {{ dateCategories.getTotalItemCount }} total.
     </p>
 {% endblock %} 
 
 {% block body %}
 
-    <div class='btn-toolbar pull-right'>
-        <div class='btn-group'>
-            <a href="{{ path('date_category_new') }}" class="btn btn-default">
-                <span class="glyphicon glyphicon-plus"></span> New
-            </a>
+    {% if is_granted('ROLE_CONTENT_ADMIN') %}
+        <div class='btn-toolbar pull-right'>
+            <div class='btn-group'>
+                <a href="{{ path('date_category_new') }}" class="btn btn-default">
+                    <span class="glyphicon glyphicon-plus"></span> New
+                </a>
+            </div>
         </div>
-    </div>
+    {% endif %}
 
     <table class="table table-bordered table-condensed table-hover table-striped">
         <thead>
