--- a/src/AppBundle/Resources/views/Subject/show.html.twig
+++ b/src/AppBundle/Resources/views/Subject/show.html.twig
@@ -11,12 +11,14 @@
             <a href="{{ path('subject_index') }}" class="btn btn-default">
                 <span class="glyphicon glyphicon-arrow-left"></span> Back
             </a>
-            <a href="{{ path('subject_edit', { 'id': subject.id }) }}" class="btn btn-default">
-                <span class='glyphicon glyphicon-edit'></span> Edit
-            </a>
-            <a href="{{ path('subject_delete', { 'id': subject.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Subject?">
-                <span class='glyphicon glyphicon-remove'></span> Delete
-            </a>
+            {% if is_granted('ROLE_CONTENT_ADMIN') %}
+                <a href="{{ path('subject_edit', { 'id': subject.id }) }}" class="btn btn-default">
+                    <span class='glyphicon glyphicon-edit'></span> Edit
+                </a>
+                <a href="{{ path('subject_delete', { 'id': subject.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Subject?">
+                    <span class='glyphicon glyphicon-remove'></span> Delete
+                </a>
+            {% endif %}
         </div>
     </div>
     <table class="table table-bordered table-condensed table-hover table-striped">
@@ -49,7 +51,7 @@
             </tr>
         </tbody>
     </table>
-            
+
     {% include 'AppBundle:Work:workList.html.twig' with {'works': subject.works} %}
 
 {% endblock %}
