--- a/src/AppBundle/Resources/views/Work/index.html.twig
+++ b/src/AppBundle/Resources/views/Work/index.html.twig
@@ -1,25 +1,27 @@
 {% extends 'base.html.twig' %}
 
- {% block pageheader %} 
+{% block pageheader %} 
     <h1>Work List</h1>
     <p class="count">
         Displaying {{ works|length }} works of {{ works.getTotalItemCount }} total.
     </p>
- {% endblock %} 
+{% endblock %} 
 
 {% block body %}
 
-        <div class='btn-toolbar pull-right'>
+    <div class='btn-toolbar pull-right'>
         <div class='btn-group'>
-            <a href="{{ path('work_new') }}" class="btn btn-default">
-                <span class="glyphicon glyphicon-plus"></span> New
-            </a>
+            {% if is_granted('ROLE_CONTENT_ADMIN') %}
+                <a href="{{ path('work_new') }}" class="btn btn-default">
+                    <span class="glyphicon glyphicon-plus"></span> New
+                </a>
+            {% endif %}
             <a href="{{ path('work_search') }}" class="btn btn-default">
                 <span class="glyphicon glyphicon-search"></span> Search
             </a>
         </div>
     </div>
-        
+
     <table class="table table-bordered table-condensed table-hover table-striped">
         <thead>
             <tr>
@@ -30,21 +32,21 @@
             </tr>
         </thead>
         <tbody>
-        {% for work in works %}
-            <tr>
-                <td>
-                    <a href="{{ path('work_show', { 'id': work.id }) }}">
-                        {{ work.title }}
-                    </a>
-                </td>
-                <td>{{ work.edition }}</td>
-                <td>{{ work.volume }}</td>
-                <td>{{ work.publicationPlace }} {{ work.publisher }}</td>
-            </tr>
-        {% endfor %}
+            {% for work in works %}
+                <tr>
+                    <td>
+                        <a href="{{ path('work_show', { 'id': work.id }) }}">
+                            {{ work.title }}
+                        </a>
+                    </td>
+                    <td>{{ work.edition }}</td>
+                    <td>{{ work.volume }}</td>
+                    <td>{{ work.publicationPlace }} {{ work.publisher }}</td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
-        
+
     <div class="navigation">
         {{ knp_pagination_render(works) }}
     </div>
