--- a/src/AppBundle/Resources/views/Work/show.html.twig
+++ b/src/AppBundle/Resources/views/Work/show.html.twig
@@ -11,12 +11,14 @@
             <a href="{{ path('work_index') }}" class="btn btn-default">
                 <span class="glyphicon glyphicon-arrow-left"></span> Back
             </a>
-            <a href="{{ path('work_edit', { 'id': work.id }) }}" class="btn btn-default">
-                <span class='glyphicon glyphicon-edit'></span> Edit
-            </a>
-            <a href="{{ path('work_delete', { 'id': work.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Work?">
-                <span class='glyphicon glyphicon-remove'></span> Delete
-            </a>
+            {% if is_granted('ROLE_CONTENT_ADMIN') %}
+                <a href="{{ path('work_edit', { 'id': work.id }) }}" class="btn btn-default">
+                    <span class='glyphicon glyphicon-edit'></span> Edit
+                </a>
+                <a href="{{ path('work_delete', { 'id': work.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Work?">
+                    <span class='glyphicon glyphicon-remove'></span> Delete
+                </a>
+            {% endif %}                
         </div>
     </div>
     <table class="table table-bordered table-condensed table-hover table-striped">
@@ -54,7 +56,9 @@
                             {% endfor %}
                         </ul>
                     {% endif %}
-                    <a href="{{ path('work_contributions', {'id': work.id}) }}" class="pull-right">Edit contributions</a>
+                    {% if is_granted('ROLE_CONTENT_ADMIN') %}
+                        <a href="{{ path('work_contributions', {'id': work.id}) }}" class="pull-right">Edit contributions</a>
+                    {% endif %}
                 </td>
             </tr>
             <tr>
@@ -71,7 +75,9 @@
                             {% endfor %}
                         </ul>
                     {% endif %}
-                    <a href="{{ path('work_dates', {'id': work.id}) }}" class="pull-right">Edit dates</a> 
+                    {% if is_granted('ROLE_CONTENT_ADMIN') %}
+                        <a href="{{ path('work_dates', {'id': work.id}) }}" class="pull-right">Edit dates</a> 
+                    {% endif %}
                 </td>
             </tr>
             <tr>
