--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,6 +46,9 @@
                             </a>
                             {{ knp_menu_render('NinesBlogBundle:Builder:postNavMenu') }}
                         </li>
+                        <li>
+                            <a href="{{ asset('docs/html/index.html') }}">Help &amp; Docs</a>
+                        </li>
 
                         {% if app.user is not null and is_granted('ROLE_ADMIN') %}
                             <li>
