add search menu.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,6 +30,12 @@
                     <ul class="nav navbar-nav">
                         <li>
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                Search <span class="caret"></span>
+                            </a>
+                            {{ knp_menu_render('AppBundle:Builder:searchMenu') }}
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                 Browse <span class="caret"></span>
                             </a>
                             {{ knp_menu_render('AppBundle:Builder:navMenu') }}
