Add some content to the home page.

--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -2,6 +2,55 @@
 
 {% block body %}
 
-    <p>Hi.</p>
+    <div class="page-header">
+        <h1>Welcome to the New Narratives Bibliography of Works by Early
+            Modern Women Philosophers!</h1>
+    </div>
+    <p>As philosophers have started becoming interested in the
+        works of women philosophers, slowly modern editions of works
+        of some women have begun appearing in print. We've been
+        helped by the interest in women's philosophical writings by
+        literary scholars of the period. But there are many women
+        whose works remain largely unexplored, in part because of
+        the inaccessibility of the works.</p>
 
-{% endblock %}
+    <p>This collectively produced open-source bibliography aims to
+        pool our collective knowledge, about who wrote what, when,
+        and where and how to find it now.</p>
+
+    <p>This bibliography will make it a more straightforward matter
+        to begin research projects on early modern women
+        philosophers. Through the bibliography, both researchers and
+        their students can find names of published authors whose
+        works have long been neglected, their works, and a start at
+        how to access those works.</p>
+
+    <p>This bibliography tracks the preparation of modern and
+        digital editions, with particular attention to the form and
+        location of digital editions. With the rediscovery of women
+        philosophers and their works, scholars have been invested in
+        making long out-of-print works more accessible. In some
+        cases, modern scholarly editions have been published. In
+        other cases, digital editions have been prepared. But there
+        is still lots more work to do. We want to ensure resources
+        are used wisely and work is not duplicated.</p>
+
+    <p>This bibliography tracks details that can have big impact in
+        tracing lines of influence. The bibliography records each
+        edition of a work, and has room for notes about important
+        differences in the editions. Multiple printings suggest that
+        a work was widely read over the period of the printing of
+        the editions. The bibliography also records whether a
+        particular edition was translated, and into which languages.
+        Translation into other languages implies a broad impact. The
+        bibliography also can track individuals to whom works are
+        dedicated and who wrote prefaces. These details can help to
+        identify nodes of research networks, and so to more easily
+        find other neglected authors of the period. </p>
+
+    <p>This creation of this bibliography was supported by a <a href="http://www.sshrc-crsh.gc.ca/home-accueil-eng.aspx">Social
+            Sciences and Humanities Research Council of Canada</a> (SSHRC)
+        Partnership Development Grant, <a href="http://www.lib.sfu.ca">SFU Library</a>, and the <a href="https://dhil.lib.sfu.ca">Digital
+            Humanities Innovation Lab</a> at SFU.
+
+    {% endblock %}
