--- a/src/AppBundle/Resources/views/genre/show.html.twig
+++ b/src/AppBundle/Resources/views/genre/show.html.twig
@@ -46,6 +46,6 @@
         </tbody>
     </table>
 
-    {% include 'AppBundle:Work:workList.html.twig' with {'works': genre.works} %}
+    {% include 'AppBundle:work:workList.html.twig' with {'works': genre.works} %}
 
 {% endblock %}
