--- a/src/AppBundle/Resources/views/work/workList.html.twig
+++ b/src/AppBundle/Resources/views/work/workList.html.twig
@@ -3,7 +3,7 @@
     <ul>
         {% for work in works %}
             <li>
-                {% include 'AppBundle:Work:workBrief.html.twig' with {'work': work } %}
+                {% include 'AppBundle:work:workBrief.html.twig' with {'work': work } %}
             </li>
         {% endfor %}
     </ul>
