--- a/src/AppBundle/Resources/views/publisher/show.html.twig
+++ b/src/AppBundle/Resources/views/publisher/show.html.twig
@@ -38,6 +38,6 @@
         </tbody>
     </table>
 
-    {% include 'AppBundle:Work:workList.html.twig' with {'works': publisher.works} %}
+    {% include 'AppBundle:work:workList.html.twig' with {'works': publisher.works} %}
 
 {% endblock %}
