--- a/src/AppBundle/Resources/views/role/show.html.twig
+++ b/src/AppBundle/Resources/views/role/show.html.twig
@@ -51,7 +51,7 @@
         <ul>
             {% for contribution in role.contributions %}
                 <li>
-                    {% include 'AppBundle:Work:workBrief.html.twig' with {'work': contribution.work} %}
+                    {% include 'AppBundle:work:workBrief.html.twig' with {'work': contribution.work} %}
                 </li>
             {% endfor %}
         </ul>
