--- a/src/AppBundle/Resources/views/subject/show.html.twig
+++ b/src/AppBundle/Resources/views/subject/show.html.twig
@@ -52,6 +52,6 @@
         </tbody>
     </table>
 
-    {% include 'AppBundle:Work:workList.html.twig' with {'works': subject.works} %}
+    {% include 'AppBundle:work:workList.html.twig' with {'works': subject.works} %}
 
 {% endblock %}
