--- a/src/AppBundle/Resources/views/work_category/show.html.twig
+++ b/src/AppBundle/Resources/views/work_category/show.html.twig
@@ -46,6 +46,6 @@
         </tbody>
     </table>
 
-    {% include 'AppBundle:Work:workList.html.twig' with {'works': workCategory.works} %}                
+    {% include 'AppBundle:work:workList.html.twig' with {'works': workCategory.works} %}                
 
 {% endblock %}
