--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,8 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">        
         <link rel="stylesheet" href="{{ asset('bower/bootstrap/dist/css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ asset('bower/bootstrap/dist/css/bootstrap-theme.min.css') }}">
-        <link rel="stylesheet" href="{{ asset('bundles/app/css/base.css') }}">        
+        <link rel="stylesheet" href="{{ asset('bundles/app/css/base.css') }}">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:200,300,400,700&amp;subset=latin-ext" rel="stylesheet">        
         <script src="{{ asset('bower/jquery/dist/jquery.min.js') }}"></script>        
         {% block styles %}
         {% endblock %}
@@ -18,6 +19,7 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
+                    <a class="navbar-brand" href="{{ path('homepage') }}">New Narratives</a>
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
@@ -90,8 +92,12 @@
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
+        {% if block('jumbo') is defined %}
+            <div class="jumbotron">
+                {{ block('jumbo') }}
+            </div>
+        {% endif %}
         <div class="container">
-
             {% if block('pageheader') is defined %}
                 <div class="page-header">
                     {{ block('pageheader') }}
