--- a/src/AppBundle/Resources/views/work/show.html.twig
+++ b/src/AppBundle/Resources/views/work/show.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block pageheader %} 
+{% block pageheader %}
     <h1>Work</h1>
-{% endblock %} 
+{% endblock %}
 
 {% block body %}
 
@@ -18,7 +18,7 @@
                 <a href="{{ path('work_delete', { 'id': work.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Work?">
                     <span class='glyphicon glyphicon-remove'></span> Delete
                 </a>
-            {% endif %}                
+            {% endif %}
         </div>
     </div>
     <table class="table table-bordered table-condensed table-hover table-striped">
@@ -50,7 +50,7 @@
                         <ul>
                             {% for contribution in work.contributions %}
                                 <li>
-                                    <a href="{{ path('person_show', {'id': contribution.person.id}) }}">{{ contribution.person }}</a>, 
+                                    <a href="{{ path('person_show', {'id': contribution.person.id}) }}">{{ contribution.person }}</a>,
                                     <a href="{{ path('role_show', {'id': contribution.role.id}) }}">{{ contribution.role }}</a>
                                 </li>
                             {% endfor %}
@@ -76,7 +76,7 @@
                         </ul>
                     {% endif %}
                     {% if is_granted('ROLE_CONTENT_ADMIN') %}
-                        <a href="{{ path('work_dates', {'id': work.id}) }}" class="pull-right">Edit dates</a> 
+                        <a href="{{ path('work_dates', {'id': work.id}) }}" class="pull-right">Edit dates</a>
                     {% endif %}
                 </td>
             </tr>
@@ -91,7 +91,7 @@
                         {{ work.publisher }}
                     </a>
                 </td>
-            </tr>              
+            </tr>
             <tr>
                 <th>Physical Description</th>
                 <td>{{ work.physicalDescription }}</td>
@@ -145,7 +145,7 @@
                                 <li>
                                     <a href='{{ path('subject_source_show', {'id': subject.subjectSource.id}) }}'>
                                         {{ subject.subjectSource }}
-                                    </a> - 
+                                    </a> -
                                     <a href='{{ path('subject_show', {'id': subject.id}) }}'>
                                         {{ subject }}
                                     </a>
@@ -204,5 +204,7 @@
             </tr>
         </tbody>
     </table>
+
+    {% include 'NinesFeedbackBundle:comment:comment-interface.html.twig' with { 'entity': work } %}
 
 {% endblock %}
