--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -2,6 +2,7 @@
 /* Move the content down, to make room for the nav bar. */
 body > .container {
     padding-top: 70px;
+    flex: 1;
 }
 
 /* Custom app styles */
